# dracula

./: .coverage  .gitignore  .pre-commit-config.yaml  MEMORY.md  plan.md  pyproject.toml
.claude/: settings.local.json
src/dracula_manager/: __main__.py  apply.py  cli.py  config.py  console.py  detection.py  discovery.py  instructions.py  launchd.py  logging_setup.py  manifest.py  themes.py
tests/: conftest.py  test_apply.py  test_cli.py  test_config.py  test_console.py  test_detection.py  test_discovery.py  test_instructions.py  test_launchd.py  test_logging_setup.py  test_manifest.py  test_themes.py
